Fix integration test + CI workflow to run ITs